--- a/.sequelizerc
+++ b/.sequelizerc
@@ -2,7 +2,7 @@ const path = require("path");
 
 module.exports = {
   config: path.resolve("./dist/db/config", "config.js"),
-  "models-path": path.resolve("./src/db", "models"),
+  "models-path": path.resolve("./dist/db", "models"),
   "seeders-path": path.resolve("./src/db", "seeders"),
   "migrations-path": path.resolve("./src/db", "migrations"),
 };
